# WeatherCRBot_Telegram

./: Dockerfile  fly.toml
WeatherCR/: Cargo.toml  Dockerfile
WeatherCR/src/: main.rs
WeatherCR/src/bot_handler/: bot_main.rs  mod.rs
WeatherCR/src/google_apis/: weather_api.rs
