[package]
name = "WeatherCR"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
itertools = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.18.0"

